fix #12 support contacts search/match (#15)

--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -44,6 +44,8 @@
 .animate
   transition all 0.5s
 
+.rc-auth-button-wrap
+  text-align right
 .rc-auth-wrap
 .rc-auth-button-wrap
   width 500px
@@ -65,7 +67,9 @@
 .rc-auth-frame
 .rc-auth-wrap
   width 500px
-  height 500px
+  height 100%
+  top 0
+  bottom 0
 
 .rc-auth-wrap
   top 60px
