fix #16 add 10 seconds cache (#17)

--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -67,14 +67,18 @@
 .rc-auth-frame
 .rc-auth-wrap
   width 500px
+  background #fff
   height 100%
   top 0
   bottom 0
 
 .rc-auth-wrap
-  top 60px
   z-index 100000
   padding 0
+
+.rc-auth-frame
+  position absolute
+  left 0
 
 .rc-hide-to-side
   width 0
