fix #20 Adjust widgets position, make sure it do not cover the help icon (#22)

--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -1,5 +1,6 @@
 @require '../css/box'
-
+body .Adapter_root.Adapter_right
+  right 60px
 .rc-auth-btn
 .call-with-ringccentral-btn
   display inline-block
