fix #37 fix auth bug (#38)

--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -91,6 +91,7 @@ body .Adapter_root.Adapter_right
   left 0
   top 0
   bottom 0
+  z-index 10000
   overflow-y scroll
   background #fff
   padding-top 50px
