--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -87,30 +87,22 @@ body .Adapter_root.Adapter_right
 
 .rc-contact-panel
   position fixed
-  width 500px
-  right 0
+  width 400px
+  left 0
   top 0
   bottom 0
   z-index 10000
+  overflow hidden
   box-shadow 0px 0px 5px 1px rgba(0, 0, 0, 0.18)
 
-.rc-hide-contact-panel
-  left -300px
 .rc-contact-panel.rc-hide-contact-panel
-  left auto
-  right -500px
-
-.rc-contact-header
-  text-align right
+  left -400px
 
 .rc-close-contact
   font-size 30px
   color #fff
   cursor pointer
-  position absolute
-  right 20px
-  top 14px
-  display block
+  display inline-block
   width 40px
   line-height 40px
   height 40px
@@ -132,3 +124,21 @@ body .Adapter_root.Adapter_right
   cursor pointer
   &:hover
     color #333
+
+.rc-contact-frame
+  position absolute
+  left 0
+  width 100%
+  height 100%
+  background #fff
+.rc-close-box
+  position absolute
+  left 0
+  top 0
+  width 100%
+  height 98px
+  line-height 90px
+  font-size 38px
+  color #fff
+  z-index 80
+  background #2e3f50
