fix #74 add loading text for contact info panel (#75)

--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -125,12 +125,14 @@ body .Adapter_root.Adapter_right
   &:hover
     color #333
 
+.rc-loading
 .rc-contact-frame
   position absolute
   left 0
   width 100%
   height 100%
   background #fff
+
 .rc-close-box
   position absolute
   left 0
@@ -142,3 +144,17 @@ body .Adapter_root.Adapter_right
   color #fff
   z-index 80
   background #2e3f50
+
+.rc-loading
+  left 0
+  width 100%
+  top 110px
+  line-height 100px
+  text-align center
+  font-size 28px
+  background #fff
+  z-index 200
+
+.rc-contact-panel-loaded
+  .rc-loading
+    display none
