--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -178,3 +178,55 @@ body .Adapter_root.Adapter_right
 .rc-contact-panel-loaded
   .rc-loading
     display none
+
+.rc-sync-btns
+  text-align right
+.rc-sync-form
+  position absolute
+  z-index 100000
+  background rgba(255,255,255, 1)
+  overflow hidden
+  left -300px
+  width 300px
+  bottom 40px
+  height 460px
+  box-shadow 0px 0px 5px 1px rgba(0, 0, 0, 0.18)
+  border-right 3px solid #ff7a59
+.rc-sync-show
+  left 0
+.rc-sync-area
+  box-sizing border-box
+  margin 0
+  padding 0
+  display inline-block
+  padding 4px 11px
+  width 100%
+  height 180px
+  line-height 1.5
+  color rgba(0, 0, 0, 0.65)
+  border 1px solid #d9d9d9
+  border-radius 4px
+  transition all .3s
+  &:hover
+    border-color #40a9ff
+.rc-sync-btn
+  line-height 1.5
+  display inline-block
+  text-align center
+  touch-action manipulation
+  cursor pointer
+  border 1px solid transparent
+  white-space nowrap
+  padding 0 15px
+  border-radius 3px
+  height 32px
+  user-select none
+  transition all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1)
+  position relative
+  box-shadow 0 2px 0 rgba(0, 0, 0, 0.015)
+  color rgba(0, 0, 0, 0.65)
+  background-color #fff
+  border-color #d9d9d9
+.rc-btn-submit
+  background #08c
+  color #fff
