fix #112 Rewrite with common module (#113)

--- a/src/redirect/style.styl
+++ b/src/redirect/style.styl
@@ -1,1 +1,1 @@
-@require '../chrome-extension/common/box'
+@require '../../node_modules/ringcentral-embeddable-extension-common/src/common/box.styl'
