Fix expire time, UI update

--- a/src/custom.styl
+++ b/src/custom.styl
@@ -48,3 +48,7 @@
   transition all .3s
   &:hover
     border-color #40a9ff
+.call-with-ringccentral-btn
+  padding 1px
+  border-radius 8px
+  height 32px
