Support delayed contacts fetch for rate limit (#116)

--- a/src/custom.styl
+++ b/src/custom.styl
@@ -52,3 +52,10 @@
   padding 1px
   border-radius 8px
   height 32px
+.rc-reload-contacts
+  position fixed
+  z-index 400
+  left 2px
+  bottom 2px
+  cursor pointer
+  background rgba(255,255,255,.25)
