--- a/src/custom.styl
+++ b/src/custom.styl
@@ -31,8 +31,16 @@
   width 100%
   height 100%
   background #fff
+.rc-contact-panel
+  left 0
+  right 0
+  width 100%
+  z-index 666
+  margin-top 60px
+  .rc-contact-frame-box
+    margin-top 46px
 .rc-contact-panel.rc-hide-contact-panel
-  left -600px
+  left -9900px
 .rc-sync-area
   box-sizing border-box
   margin 0
@@ -48,3 +56,27 @@
   transition all .3s
   &:hover
     border-color #40a9ff
+.call-with-ringccentral-btn
+  padding 1px
+  border-radius 8px
+  height 32px
+
+#Hubspot-rc
+  overflow visible
+.text-center .call-with-ringccentral-btn
+  margin 5px 0
+.wordbreak
+  word-break break-all
+
+.rc-reloading-contacts
+  position fixed
+  display inline-block
+  left 0
+  bottom 0
+  padding 5px
+  background #ffffff
+  border-radius 0 3px 3px 0
+  z-index 401
+  box-shadow 0px 0px 3px 3px rgba(0,0,0,0.35)
+.rc-call-dds
+  width 160px
