--- a/src/custom.styl
+++ b/src/custom.styl
@@ -80,3 +80,11 @@
   box-shadow 0px 0px 3px 3px rgba(0,0,0,0.35)
 .rc-call-dds
   width 160px
+.flex
+  display flex
+  .rc-input
+    width 100%
+  .flex-item
+    flex-grow 1
+.flex-item + .flex-item
+  margin-left 2%
