Support connect with RingCentral

--- a/src/custom.styl
+++ b/src/custom.styl
@@ -88,3 +88,24 @@
     flex-grow 1
 .flex-item + .flex-item
   margin-left 2%
+.rc-meet-icon
+  line-height 24px
+  width 24px
+  text-align center
+  margin 0 1px
+  border 1px solid #fff
+  border-radius 2px
+  cursor pointer
+  &:hover
+    border 1px solid #eee
+  svg
+    display inline-block
+    vertical-align middle
+.rc-meet-shade
+  position absolute
+  left 0
+  top 0
+  width 100%
+  height 100%
+  z-index 2221
+  background rgba(0,0,0,.5)
