--- a/src/lib/inner.styl
+++ b/src/lib/inner.styl
@@ -17,6 +17,7 @@
   left 5px
 .rc-toolt-tip-card
   z-index 12000 !important
+.rc-add-call-log-form
 .rc-add-contact-form
   position absolute
   left 0
@@ -25,3 +26,5 @@
   height 100%
   top 35px
   bottom 0
+.rc-add-call-log-form
+  top 50%
