--- a/src/lib/inner.styl
+++ b/src/lib/inner.styl
@@ -23,8 +23,6 @@
   left 0
   width 100%
   background #fff
-  height 100%
+  height calc(100% - 35px)
   top 35px
   bottom 0
-.rc-add-call-log-form
-  top 50%
