Support select call result (#206)

--- a/src/lib/inner.styl
+++ b/src/lib/inner.styl
@@ -17,11 +17,12 @@
   left 5px
 .rc-toolt-tip-card
   z-index 12000 !important
+.rc-add-call-log-form
 .rc-add-contact-form
   position absolute
   left 0
   width 100%
   background #fff
-  height 100%
+  height calc(100% - 35px)
   top 35px
   bottom 0
