Major upgrade: Replace jsstore with Dexie to increase database performance

--- a/src/lib/inner.styl
+++ b/src/lib/inner.styl
@@ -26,3 +26,8 @@
   height calc(100% - 35px)
   top 35px
   bottom 0
+.rc-rebuild-data
+  background #fff
+  border-top 1px solid #eee
+  border-radius 3px
+  opacity .95
