--- a/src/custom.styl
+++ b/src/custom.styl
@@ -4,80 +4,23 @@
 // node_modules/ringcentral-embeddable-extension-common/src/spa/style.styl
 // for overides or as example
 
-.rc-auth-frame
-  position absolute
-  left 0
-  width 500px
-  background #fff
-  height 100%
-  top 0
-  bottom 0
-.rc-auth-wrap
-  width 500px
-  z-index 100000
-  padding 0
-  border-right 3px solid #ff7a59
-  background #fff
-  height 100%
-  bottom 0
-  top 0
-.rc-auth-wrap.rc-hide-to-side
-  left -800px
-  padding 0
-.rc-loading
 .rc-contact-frame
-  position absolute
-  left 0
   width 100%
-  height 100%
+  height 500px
   background #fff
-.rc-contact-panel
-  left 0
-  right 0
-  width 100%
-  z-index 666
-  margin-top 60px
-  .rc-contact-frame-box
-    margin-top 46px
-.rc-contact-panel.rc-hide-contact-panel
-  left -9900px
-.rc-sync-area
-  box-sizing border-box
-  margin 0
-  padding 0
-  display inline-block
-  padding 4px 11px
-  width 100%
-  height 180px
-  line-height 1.5
-  color rgba(0, 0, 0, 0.65)
-  border 1px solid #d9d9d9
-  border-radius 4px
-  transition all .3s
-  &:hover
-    border-color #40a9ff
+
 .call-with-ringccentral-btn
   padding 1px
   border-radius 8px
   height 32px
 
-#Hubspot-rc
+#HubSpot-rc
   overflow visible
 .text-center .call-with-ringccentral-btn
   margin 5px 0
 .wordbreak
   word-break break-all
 
-.rc-reloading-contacts
-  position fixed
-  display inline-block
-  left 0
-  bottom 0
-  padding 5px
-  background #ffffff
-  border-radius 0 3px 3px 0
-  z-index 1000
-  box-shadow 0px 0px 3px 3px rgba(0,0,0,0.35)
 .rc-call-dds
   width 160px
 .flex
@@ -113,3 +56,9 @@
   width 136px
 *[class*="ant-"].ant-notification
   z-index 3000
+
+.rc-drag-wrap
+  position fixed
+  left 3px
+  bottom 3px
+  z-index 777
