--- a/src/custom.styl
+++ b/src/custom.styl
@@ -62,3 +62,11 @@
   left 3px
   bottom 3px
   z-index 777
+  svg
+    box-shadow 1px 1px 4px 2px rgba(0,0,0,0.55)
+.rc-wordbreak
+  word-break break-all
+.rc-elli
+  overflow hidden
+  white-space nowrap
+  text-overflow ellipsis
