--- a/src/custom.styl
+++ b/src/custom.styl
@@ -70,3 +70,13 @@
   overflow hidden
   white-space nowrap
   text-overflow ellipsis
+.ant-modal-root .ant-modal-wrap
+  z-index 1100
+// .rc-incoming-call, .rc-incoming-call .ant-modal-content
+//   height 100vh
+//   width 100vw
+//   margin 0
+//   top 0
+// .rc-incoming-call
+//   .ant-modal-body
+//     height calc(100vh - 110px)
