Hide panel when submitting call log

--- a/src/lib/call-log-check.styl
+++ b/src/lib/call-log-check.styl
@@ -22,6 +22,11 @@
   width 500px
   z-index 9999
   background #fff
+  &.submit
+    width auto
+    left 100px
+    bottom 0px
+    padding 5px
 .rc-log-list
   max-height 300px
   overflow-y scroll
